--- a/style.css
+++ b/style.css
@@ -1,3 +1,60 @@
+/* VARIABLES */
+
+:root {
+  --primaryBlue: #0077c5;
+  --secondaryText: #4c4c4c;
+  --labelText: #404040;
+  --footerText: #505050;
+}
+
+/* BASE STYLES */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: rgb(236, 238, 241);
+  font-size: 14px;
+  font-family: helvetica, arial, sans-serif;
+}
+
+button {
+  color: #ffffff;
+  background-color: var(--primaryBlue);
+  border-radius: 4px;
+}
+
+label {
+  color: var(--labelText);
+  font-weight: 400;
+  line-height: 25px;
+  padding-bottom: 6px;
+  outline: none;
+}
+
+input {
+  font-size: 1.2em;
+  border: 1px solid #c1c5c8;
+  border-radius: 3px;
+  outline: none;
+  padding: 0px 6px 0px 8px;
+  width: 320px;
+  height: 34px;
+  line-height: 1.3em;
+
+}
+
+input:focus {
+  border: none;
+  outline: 0 none;
+  border: 1px solid rgba(82, 168, 236, .8);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(82, 168, 236, .6);
+}
+
+/* FONTS */
+
+/* MOBILE STYLES */
+
 header {
   display: none;
 }
@@ -8,4 +65,11 @@ header {
 
 input[type="password"] {
   background-image: url(./assets/unlocked.png);
+}
+
+/* TABLETS AND LARGER SCREENS */
+
+@media screen and (min-width: 768px) {
+
+  
 }
