--- a/style.css
+++ b/style.css
@@ -16,15 +16,25 @@ body {
   background-color: rgb(236, 238, 241);
   font-size: 14px;
   font-family: helvetica, arial, sans-serif;
-  font-weight: 400;
 }
+
+footer {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 12px;
+  color: var(--footerText);
+  padding: 20px 0;
+}
+
 
 form {
   background-color: white;
   padding: 30px;
   border: 1px solid #c7c7c7;
   border-radius: 2px;
-  width: 380px;
+  width: 80%;
+  max-width: 380px;
 }
 
 button {
@@ -35,7 +45,6 @@ button {
 
 label {
   color: var(--labelText);
-  font-weight: 400;
   line-height: 25px;
   padding-bottom: 6px;
   outline: none;
@@ -60,20 +69,72 @@ input:focus {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(82, 168, 236, .6);
 }
 
-/* FONTS */
+input[type="password"] {
+  background-image: url(./assets/unlocked.png);
+  background-repeat: no-repeat;
+}
+
+a {
+  text-decoration: none;
+  color: var(--primaryBlue);
+}
+
+a:visited {
+  text-decoration: none;
+  color: var(--primaryBlue);
+}
 
 /* MOBILE STYLES */
 
+.logo-container {
+  text-align: center;
+}
+
+.main-logo {
+  padding: 20px 0;
+}
+
+.partner-logos {
+  padding-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.partner-logos a {
+  display: inline-flex;
+}
+
+.icon {
+  height: 23px;
+  margin-right: 4px;
+}
+
+.icon-text {
+  height: 22px;
+  margin-right: 9px;
+}
+
+.mint-text {
+  margin-right: 9px;
+  height: 20px;
+  width: 37px
+}
+
+.qb-text {
+  margin-right: 9px;
+  height: 21px;
+  width: 98px
+}
+
+.tt-text {
+  margin-right: 9px;
+  height: 20px;
+  width: 74px;
+}
+
 header {
   display: none;
-}
-
-.partner-logos img {
-  height: 30px;
-}
-
-input[type="password"] {
-  background-image: url(./assets/unlocked.png);
 }
 
 /* TABLETS AND LARGER SCREENS */
