--- a/style.css
+++ b/style.css
@@ -35,6 +35,25 @@ form {
   border-radius: 2px;
   width: 80%;
   max-width: 380px;
+  margin: 0 auto;
+}
+
+h1 {
+  color: var(--secondaryText);
+  font-size: 24px;
+  text-align: center;
+}
+
+h3 {
+  color: var(--secondaryText);
+  text-align: center;
+  font-weight: 300;
+  line-height: 1.2;
+  padding-bottom: 20px;
+}
+
+h3 a {
+  font-size: 12px;
 }
 
 button {
@@ -131,6 +150,11 @@ a:visited {
   margin-right: 9px;
   height: 20px;
   width: 74px;
+}
+
+.leading-text {
+  padding-top: 20px;
+  padding-bottom: 0;
 }
 
 header {
