--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ a:visited {
   padding: 20px 0;
 }
 
+
 .partner-logos {
   padding-bottom: 24px;
   display: flex;
@@ -130,6 +131,8 @@ a:visited {
 
 .partner-logos a {
   display: inline-flex;
+  /* visibility: hidden; */
+  /* animation: translate ease-out 600ms 1s forwards; */
 }
 
 .icon {
@@ -163,6 +166,7 @@ a:visited {
 .leading-text {
   padding-top: 20px;
   padding-bottom: 0;
+  transition: opacity 500ms ease-in-out 2s;
 }
 
 .email-label {
@@ -262,6 +266,32 @@ header {
 /* TABLETS AND LARGER SCREENS */
 
 @media screen and (min-width: 768px) {
+  header {
+    display: grid;
+    color: var(--footerText);
+    font-size: 12px;
+    line-height: 1.5;
+    justify-content: right;
+    padding: 10px 30px;
+  }
 
+  nav {
+    display: flex;
+  }
+
+  nav button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #4c4c4c;
+    padding: 0 20px;
+    margin-left: 10px;
+    font-size: 13.75px;
+  }
+
+  nav button > img {
+    height: 13.75px;
+    margin-right: 6px;
+  }
   
 }
